# pipestage

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: compare_batch.py  compare_embed.py  compare_fanout.py  compare_fetch.py  compare_files.py  compare_notify.py  compare_paginated.py  compare_resilient.py  ps_batch.py  ps_embed.py  ps_fanout.py  ps_fetch.py  ps_files.py  ps_notify.py  ps_paginated.py  ps_resilient.py  raw_batch.py  raw_embed.py  raw_fanout.py  raw_fetch.py  raw_files.py  raw_notify.py  raw_paginated.py  raw_resilient.py  run_all.py
src/pipestage/: __init__.py  _ops.py  _stream.py  _utils.py
tests/: test_basic.py  test_concurrency.py  test_errors.py
