[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipestage"
version = "0.1.0"
description = "Async data pipelines with safe staged processing and bounded concurrency"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["async", "asyncio", "pipeline", "concurrency", "stream", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/openlab-x/pipestage"
Repository = "https://github.com/openlab-x/pipestage"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pipestage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = true
mypy_path = "src"
packages = ["pipestage"]
